--- a/main.html
+++ b/main.html
@@ -10,6 +10,27 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<div id="headline">
+		<h1>Welcome to Accio Jobs!</h1>
+	</div>
+	<div id="blog">
+		<a href=""><h3>Blog</h3></a>
+	</div>
+		<div>
+			<img width="200px" height="200px" src="">
+			<a href="" style=color:blue><h3>Brute Force vs.Optimization</h3></a>
+			<p style="color:blue"></p>
+		</div>
+	<div>
+			<img width="200px" height="200px" src="">
+			<a href="" style=color:blue><h3>DSA vs.Competition Programming</h3></a>
+			<p style="color:blue"></p>
+		</div>
+	<div>
+			<img width="200px" height="200px" src="">
+			<a href="" style=color:blue><h3>Complete Guide on FlexBox</h3></a>
+			<p style="color:blue"></p>
+		</div>
 
 </body>
 
