--- a/main.html
+++ b/main.html
@@ -11,25 +11,27 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div id="headline">
-		<h1>Welcome to Accio Jobs!</h1>
+		<h1 style="text-align:center">Welcome to Accio Jobs!</h1>
 	</div>
 	<div id="blog">
-		<a href=""><h3>Blog</h3></a>
+		<a href="https://acciojob.com/blog/"><h3>Blog</h3></a>
 	</div>
 		<div>
-			<img width="200px" height="200px" src="">
-			<a href="" style=color:blue><h3>Brute Force vs.Optimization</h3></a>
-			<p style="color:blue"></p>
+			<img width="200px" height="200px" src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000">
+			<a href="https://acciojob.com/blog/brute-force-vs-optimization/" style=color:blue><h3>Brute Force vs.Optimization</h3></a>
+			<p style="color:blue"><u>We can say that optimization is one step further than the brute-force method of problem solving...</u></p>
 		</div>
+	<br>
 	<div>
-			<img width="200px" height="200px" src="">
-			<a href="" style=color:blue><h3>DSA vs.Competition Programming</h3></a>
-			<p style="color:blue"></p>
+			<img width="200px" height="200px" src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000">
+			<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/" style=color:blue><h3>DSA vs.Competition Programming</h3></a>
+			<p style="color:blue"><u>DSA or Competitive programming? What is better for you? Questions such as these often put you in a...</u></p>
 		</div>
+	<br>
 	<div>
-			<img width="200px" height="200px" src="">
-			<a href="" style=color:blue><h3>Complete Guide on FlexBox</h3></a>
-			<p style="color:blue"></p>
+			<img width="200px" height="200px" src="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png">
+			<a href="https://acciojob.com/blog/untitled-19/" ><h3>Complete Guide on FlexBox</h3></a>
+			<p style="color:rebeccapurple"><u>As a job seeker,you wonder how to make your LinkedIn profile stand out to recuiter.Your LinkedIn...</u></p>
 		</div>
 
 </body>
