--- a/main.html
+++ b/main.html
@@ -11,14 +11,14 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div id="headline">
-		<h1 style="text-align:center">Welcome to Accio Jobs!</h1>
+		<marquee><h1 style="text-align:center">Welcome to Accio Jobs!</h1></marquee>
 	</div>
 	<div id="blog">
 		<a href="https://acciojob.com/blog/"><h3>Blog</h3></a>
 	</div>
 		<div>
 			<img width="200px" height="200px" src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000">
-			<a href="https://acciojob.com/blog/brute-force-vs-optimization/" style=color:blue><h3>Brute Force vs.Optimization</h3></a>
+			<a href="https://acciojob.com/blog/brute-force-vs-optimization/" style=color:blue><h3>Brute Force vs. Optimization</h3></a>
 			<p style="color:blue"><u>We can say that optimization is one step further than the brute-force method of problem solving...</u></p>
 		</div>
 	<br>
