--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 		<marquee><h1 style="text-align:center">Welcome to Accio Jobs!</h1></marquee>
 	</div>
 	<div id="blog">
-		<a href="https://acciojob.com/blog/"><h3>Blog</h3></a>
+		<a href="https://acciojob.com/blog/"><h1>Blog</h1></a>
 	</div>
 		<div>
 			<img width="200px" height="200px" src="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000">
@@ -24,7 +24,7 @@
 	<br>
 	<div>
 			<img width="200px" height="200px" src="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000">
-			<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/" style=color:blue><h3>DSA vs.Competition Programming</h3></a>
+			<a href="https://acciojob.com/blog/dsa-vs-competitive-programming/" style=color:blue><h3>DSA vs. Competitive Programming</h3></a>
 			<p style="color:blue"><u>DSA or Competitive programming? What is better for you? Questions such as these often put you in a...</u></p>
 		</div>
 	<br>
